--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
 
-  <name>Quick Meausre</name>
+  <name>Quick Measure</name>
 
   <description>Selecting a feature in the graphics window shows the details of that feature in a dialog text box so the information can be copy/pasted, selecting a second feature will show the distance between the features and if applicable the difference in the x, y and z axis between them.</description>
 
@@ -11,9 +11,9 @@
 
   <url branch="main" type="repository">https://github.com/DanMiel/QuickMeasure</url>
 
-  <url type="readme">https://github.com/DanMiel/QuickMeasure/main/README.md</url>
+  <url type="readme">https://github.com/DanMiel/QuickMeasure/blob/main/README.md</url>
 
-  <icon>https://github.com/DanMiel/QuickMeasure/Icons/QuickMeasure.svg</icon>
+  <icon>Icons/QuickMeasure.svg</icon>
 
   <content>
     <workbench>
